tests/int/use_command/snapshots/integration__int__use_command__basic_output__modules_inline_modules.snap
---
source: tests/int/use_command/basic_output.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - inline_modules
---
success: true
exit_code: 0
----- stdout -----
crate::file_module::greet

----- stderr -----
