tests/int/use_command/snapshots/integration__int__use_command__basic_output__modules_item_visibility.snap
---
source: tests/int/use_command/basic_output.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - item_visibility
---
success: true
exit_code: 0
----- stdout -----
crate::reexports::Foo

----- stderr -----
