tests/int/use_command/snapshots/integration__int__use_command__basic_output__modules_nesting.snap
---
source: tests/int/use_command/basic_output.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - nesting
---
success: true
exit_code: 0
----- stdout -----
crate::inline_modules

----- stderr -----
