tests/int/use_command/snapshots/integration__int__use_command__basic_output__modules_no_pub_items.snap
---
source: tests/int/use_command/basic_output.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - no_pub_items
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
