tests/int/use_command/snapshots/integration__int__use_command__basic_output__modules_reexports.snap
---
source: tests/int/use_command/basic_output.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - reexports
---
success: true
exit_code: 0
----- stdout -----
crate::file_module
crate::nesting
crate::reexports::internal::Foo
crate::reexports::internal::Foo as Bar
crate::reexports::internal::Secret
crate::reexports::internal::{Baz, Qux, InternalEnum, InternalTrait, INTERNAL_CONST_A, INTERNAL_CONST_B, internal_helper_1, internal_helper_2}
crate::reexports::types::*

----- stderr -----
