tests/int/use_command/snapshots/integration__int__use_command__basic_output__modules_uses_empty_glob.snap
---
source: tests/int/use_command/basic_output.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - uses_empty_glob
---
success: true
exit_code: 0
----- stdout -----
crate::no_pub_items::*

----- stderr -----
