tests/int/use_command/snapshots/integration__int__use_command__basic_output__modules_visibility.snap
---
source: tests/int/use_command/basic_output.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - visibility
---
success: true
exit_code: 0
----- stdout -----
crate::visibility::inner::uses_restricted
crate::visibility::private_mod::deepest_greet
crate::visibility::pub_crate_mod::parent_greet
crate::visibility::pub_super_mod::dir_module_greet
crate::visibility::restricted_mod::RestrictedConfig
crate::visibility::restricted_mod::VERSION
crate::visibility::restricted_mod::nesting_depth

----- stderr -----
